--- a/src/it/projects/MJAVADOC-338_downloadSources/pom.xml
+++ b/src/it/projects/MJAVADOC-338_downloadSources/pom.xml
@@ -22,29 +22,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.maven.plugins.maven-javadoc-plugin.it</groupId>
-  <artifactId>mjavadoc-514</artifactId>
+  <groupId>org.apache.maven.plugins.javadoc.it</groupId>
+  <artifactId>mjavadoc338</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  
-  <url>https://issues.apache.org/jira/browse/MJAVADOC-514</url>
 
-  <repositories>
-    <repository>
-      <id>repo514</id>
-      <url>@mrm.3rdparty.url@</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-  
   <build>
     <pluginManagement>
       <plugins>
@@ -53,19 +38,20 @@
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>@project.version@</version>
           <configuration>
-            <useStandardDocletOptions>false</useStandardDocletOptions>
-            <docletArtifacts>
-              <artifact>
-                <groupId>org.apache.maven.plugins.javadoc.its</groupId>
-                <artifactId>doclet</artifactId>
-                <version>1.0</version>
-              </artifact>
-            </docletArtifacts>
-            <doclet>org.apache.maven.plugins.javadoc.its.Doclet</doclet>
+            <includeDependencySources>true</includeDependencySources>
+            <doclint>none</doclint>
           </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
   </build>
-
+  
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.maven.plugins.javadoc.its</groupId>
+      <artifactId>mjavadoc338-direct</artifactId>
+       <version>1.0</version>
+    </dependency> 
+  </dependencies>
+  
 </project>
