switch to github.io

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ under the License.
     <relativePath />
   </parent>
 
-  <groupId>com.github.schelldorfer</groupId>
+  <groupId>io.github.schelldorfer</groupId>
   <artifactId>maven-javadoc-plugin</artifactId>
   <version>3.1.2</version>
   <packaging>maven-plugin</packaging>
